--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -1,213 +1,218 @@
-<div class="global-wrapper clearfix" id="global-wrapper">
-  <div class="navbar-before mobile-hidden">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <ul class="nav navbar-nav navbar-right navbar-right-no-mar">
-            <li><a href="/about_us">About Us</a>
-            </li>
-            <li><a href="/listing_policy">Listing Policy</a>
-            </li>
-            <li><a href="/contact_us">Contact Us</a>
-            </li>
-          </ul>
+<div class="fixed-header">
+  <div class="global-wrapper clearfix" id="global-wrapper">
+    <div class="navbar-before mobile-hidden">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <ul class="nav navbar-nav navbar-right navbar-right-no-mar">
+              <li><a href="/about_us">About Us</a>
+              </li>
+              <li><a href="/listing_policy">Listing Policy</a>
+              </li>
+              <li><a href="/faq">FAQ</a>
+              </li>
+              <li><a href="/contact_us">Contact Us</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-login-dialog">
-    <h3 class="widget-title">Login</h3>
-    <p>Welcome, Login to get started</p>
-    <hr />
-    <%= form_tag customer_sign_in_path do %>
-        <div class="form-group">
-          <%= label_tag :email %>
-          <%= email_field_tag :email, params[:email], class: 'form-control' %>
-        </div>
-        <div class="form-group">
-          <%= label_tag :password %>
-          <%= password_field_tag :password, '',class: 'form-control' %>
-        </div>
-        <%= submit_tag 'Sign In', class: 'btn btn-primary' %>
-    <%- end %>
-    <div class="gap gap-small"></div>
-    <ul class="list-inline">
-      <li>
-        <%#= link_to 'Register Here', customer_step_one_path %>
-        <a href="#nav-mobile-dialog" class="popup-text">Register Here</a>
-      </li>
-    </ul>
-  </div>
+    <div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-login-dialog">
+      <h3 class="widget-title">Login</h3>
+      <p>Welcome, Login to get started</p>
+      <hr />
+      <%= form_tag customer_sign_in_path do %>
+          <div class="form-group">
+            <%= label_tag :email %>
+            <%= email_field_tag :email, params[:email], class: 'form-control' %>
+          </div>
+          <div class="form-group">
+            <%= label_tag :password %>
+            <%= password_field_tag :password, '',class: 'form-control' %>
+          </div>
+          <%= submit_tag 'Sign In', class: 'btn btn-primary' %>
+      <%- end %>
+      <div class="gap gap-small"></div>
+      <ul class="list-inline">
+        <li>
+          <%#= link_to 'Register Here', customer_step_one_path %>
+          <a href="#nav-mobile-dialog" class="popup-text">Register Here</a>
+        </li>
+      </ul>
+    </div>
 
-  <div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-account-dialog">
-    <h3 class="widget-title">Register</h3>
-    <p>Welcome, Register to get Enter</p>
-    <hr />
-    <%= simple_form_for :customer, :url => customer_sign_up_path do |f| %>
+    <div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-account-dialog">
+      <h3 class="widget-title">Register</h3>
+      <p>Welcome, Register to get Enter</p>
+      <hr />
+      <%= simple_form_for :customer, :url => customer_sign_up_path do |f| %>
+          <div class="form-group">
+            <%= f.input :name, class: 'form-control' %>
+          </div>
+          <div class="form-group">
+            <%= f.input :email, class: 'form-control' %>
+          </div>
+          <div class="form-group">
+            <%= f.input :password, class: 'form-control' %>
+          </div>
+          <div class="form-group">
+            <%= f.input :password_confirmation, class: 'form-control' %>
+          </div>
+          <%= submit_tag 'Submit', class: 'btn btn-primary' %>
+      <%- end %>
+      <div class="gap gap-small"></div>
+    </div>
+    <div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-pwd-dialog">
+      <h3 class="widget-title">Password Recovery</h3>
+      <p>Enter Your Email and We Will Send the Instructions</p>
+      <hr />
+      <form>
         <div class="form-group">
-          <%= f.input :name, class: 'form-control' %>
+          <label>Your Email</label>
+          <input class="form-control" type="text" />
         </div>
-        <div class="form-group">
-          <%= f.input :email, class: 'form-control' %>
-        </div>
-        <div class="form-group">
-          <%= f.input :password, class: 'form-control' %>
-        </div>
-        <div class="form-group">
-          <%= f.input :password_confirmation, class: 'form-control' %>
-        </div>
-        <%= submit_tag 'Submit', class: 'btn btn-primary' %>
-    <%- end %>
-    <div class="gap gap-small"></div>
-  </div>
-  <div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-pwd-dialog">
-    <h3 class="widget-title">Password Recovery</h3>
-    <p>Enter Your Email and We Will Send the Instructions</p>
-    <hr />
-    <form>
+        <input class="btn btn-primary" type="submit" value="Recover Password" />
+      </form>
+    </div>
+
+    <div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-mobile-dialog">
+      <h3 class="widget-title">Mobile Number</h3>
+      <hr />
+      <input type="number" class="form-control" min="10" max="10"  />
+      <a href="#nav-otp-dialog" class="popup-text mobile-submit">Proceed</a>
+      <div class="gap gap-small"></div>
+
+    </div>
+
+    <div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-otp-dialog">
+      <h3 class="widget-title">OTP</h3>
+      <p>Enter OTP for Registration</p>
+      <hr />
       <div class="form-group">
-        <label>Your Email</label>
-        <input class="form-control" type="text" />
+        <input type="number" class="form-control" min="4" max="4"  />
       </div>
-      <input class="btn btn-primary" type="submit" value="Recover Password" />
-    </form>
-  </div>
+      <a href="#nav-account-dialog" class="popup-text otp-submit">Proceed</a>
+      <div class="gap gap-small"></div>
+      <ul class="list-inline">
+        <li>
+          <p style="font-size: 12px; color: #888;">Click on Send OTP to receive 4 digit verification code on your register mobile number.</p>
+          <a href="javascript:void(0)" class="sending-otp">Resend OTP</a>
+      </ul>
 
-  <div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-mobile-dialog">
-    <h3 class="widget-title">Mobile Number</h3>
-    <hr />
-    <input type="number" class="form-control" min="10" max="10"  />
-    <a href="#nav-otp-dialog" class="popup-text mobile-submit">Proceed</a>
-    <div class="gap gap-small"></div>
+    </div>
 
-  </div>
-
-  <div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-otp-dialog">
-  <h3 class="widget-title">OTP</h3>
-  <p>Enter OTP for Registration</p>
-  <hr />
-  <div class="form-group">
-    <input type="number" class="form-control" min="4" max="4"  />
-  </div>
-    <a href="#nav-account-dialog" class="popup-text otp-submit">Proceed</a>
-    <div class="gap gap-small"></div>
-    <ul class="list-inline">
-      <li>
-        <p style="font-size: 12px; color: #888;">Click on Send OTP to receive 4 digit verification code on your register mobile number.</p>
-        <a href="javascript:void(0)" class="sending-otp">Resend OTP</a>
-    </ul>
-
-  </div>
-
-  <!--<div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-otp-dialog">-->
+    <!--<div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-otp-dialog">-->
     <!--<h3 class="widget-title">OTP</h3>-->
     <!--<p>Enter OTP for Registration</p>-->
     <!--<hr />-->
     <!--<%#= form_tag customer_step_three_path, method: :post  do %>-->
-        <!--<div class="form-group">-->
-          <!--<%#= text_field_tag :otp, "", class: 'form-control', minlength: 4, maxlength: 4 %>-->
-        <!--</div>-->
-        <!--<%#= hidden_field_tag 'phone', @phone %>-->
-        <!--<%#= submit_tag 'Proceed', class: 'btn btn-primary' %>-->
-        <!--<div class="gap gap-small"></div>-->
-        <!--<ul class="list-inline">-->
-          <!--<li>-->
-            <!--<p style="font-size: 12px; color: #888;">Click on Send OTP to receive 4 digit verification code on your register mobile number.</p>-->
-            <!--<a href="javascript:void(0)" class="popup-text sending-otp">Send OTP</a>-->
-        <!--</ul>-->
-        <!--&lt;!&ndash; <div class=" btn btn-info "></div> &ndash;&gt;-->
+    <!--<div class="form-group">-->
+    <!--<%#= text_field_tag :otp, "", class: 'form-control', minlength: 4, maxlength: 4 %>-->
+    <!--</div>-->
+    <!--<%#= hidden_field_tag 'phone', @phone %>-->
+    <!--<%#= submit_tag 'Proceed', class: 'btn btn-primary' %>-->
+    <!--<div class="gap gap-small"></div>-->
+    <!--<ul class="list-inline">-->
+    <!--<li>-->
+    <!--<p style="font-size: 12px; color: #888;">Click on Send OTP to receive 4 digit verification code on your register mobile number.</p>-->
+    <!--<a href="javascript:void(0)" class="popup-text sending-otp">Send OTP</a>-->
+    <!--</ul>-->
+    <!--&lt;!&ndash; <div class=" btn btn-info "></div> &ndash;&gt;-->
     <!--<%# end %>-->
-  <!--</div>-->
+    <!--</div>-->
 
-  <nav class="navbar navbar-inverse navbar-main yamm">
-    <div class="container">
-      <div class="navbar-header">
-        <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#main-nav-collapse" area_expanded="false"><span class="sr-only">Main Menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">
-          ByeBuying
-        <!--Barter-->
-        </a>
-      </div>
-      <div class="collapse navbar-collapse" id="main-nav-collapse">
-        <ul class="nav navbar-nav">
-          <li class="dropdown"><a href="javascript:void(0)"><i class="fa fa-reorder"></i>&nbsp; Shop by Category<i class="drop-caret" data-toggle="dropdown"></i></a>
-            <ul class="dropdown-menu dropdown-menu-category">
-              <!--<li><a href="/products">Products</a></li>-->
-              <!--<li><a href="/services">Services</a></li>-->
-              <% @categories.each do |category| %>
-                  <li><a href="<%= category_path(category)%>"><%= category.name %></a>
-                    <div class="dropdown-menu-category-section">
-                      <div class="dropdown-menu-category-section-inner">
-                        <div class="dropdown-menu-category-section-content">
-                          <div class="row">
-                            <div class="col-md-12">
-                              <ul class="dropdown-menu-category-list">
-                                <% category.subcategories.each do |subcategory|%>
-                                    <li><a href="<%= subcategory_path(subcategory) %>"><%= subcategory.name %></a>
-                                    </li>
-                                <% end %>
-                              </ul>
+    <nav class="navbar navbar-inverse navbar-main yamm">
+      <div class="container">
+        <div class="navbar-header">
+          <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#main-nav-collapse" area_expanded="false"><span class="sr-only">Main Menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">
+            ByeBuying
+            <!--Barter-->
+          </a>
+        </div>
+        <div class="collapse navbar-collapse" id="main-nav-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a href="javascript:void(0)"><i class="fa fa-reorder"></i>&nbsp; Shop by Category<i class="drop-caret" data-toggle="dropdown"></i></a>
+              <ul class="dropdown-menu dropdown-menu-category">
+                <!--<li><a href="/products">Products</a></li>-->
+                <!--<li><a href="/services">Services</a></li>-->
+                <% @categories.each do |category| %>
+                    <li><a href="<%= category_path(category)%>"><%= category.name %></a>
+                      <div class="dropdown-menu-category-section">
+                        <div class="dropdown-menu-category-section-inner">
+                          <div class="dropdown-menu-category-section-content">
+                            <div class="row">
+                              <div class="col-md-12">
+                                <ul class="dropdown-menu-category-list">
+                                  <% category.subcategories.each do |subcategory|%>
+                                      <li><a href="<%= subcategory_path(subcategory) %>"><%= subcategory.name %></a>
+                                      </li>
+                                  <% end %>
+                                </ul>
+                              </div>
+                              <!--<div class="col-md-6">-->
+                              <!--<ul class="dropdown-menu-category-list">-->
+                              <!--<li><a href="#">Washing Machines</a>-->
+                              <!--</li>-->
+                              <!--<li><a href="#">Vaccumm Cleaner</a>-->
+                              <!--</li>-->
+                              <!--<li><a href="#">Air Purifiers</a>-->
+                              <!--</li>-->
+                              <!--<li><a href="#">Others</a>-->
+                              <!--</li>-->
+                              <!--</ul>-->
+                              <!--</div>-->
                             </div>
-                            <!--<div class="col-md-6">-->
-                            <!--<ul class="dropdown-menu-category-list">-->
-                            <!--<li><a href="#">Washing Machines</a>-->
-                            <!--</li>-->
-                            <!--<li><a href="#">Vaccumm Cleaner</a>-->
-                            <!--</li>-->
-                            <!--<li><a href="#">Air Purifiers</a>-->
-                            <!--</li>-->
-                            <!--<li><a href="#">Others</a>-->
-                            <!--</li>-->
-                            <!--</ul>-->
-                            <!--</div>-->
                           </div>
                         </div>
                       </div>
-                    </div>
-                  </li>
-              <% end %>
-            </ul>
-          </li>
-        </ul>
+                    </li>
+                <% end %>
+              </ul>
+            </li>
+          </ul>
 
-        <%= simple_form_for [Search.new], html: {class: 'navbar-form navbar-left navbar-main-search' }, role: 'search' do |f| %>
-            <div class="form-group">
-              <%= f.input :name, label: false, class: 'form-control', placeholder: 'Search...'  %>
-              <%#= f.input :controller_name, :as => :hidden, input_html: { value: "#{params[:controller]}" }  %>
-              <%#= f.input :action_name, :as => :hidden, input_html: {value: "#{params[:action]}"} %>
-              <%= f.submit '', class: 'fa fa-search navbar-main-search-submit' %>
-              <i class="fa fa-search search-icon"></i>
-            </div>
-        <% end %>
+          <%= simple_form_for [Search.new], html: {class: 'navbar-form navbar-left navbar-main-search' }, role: 'search' do |f| %>
+              <div class="form-group">
+                <%= f.input :name, label: false, class: 'form-control', placeholder: 'Search...'  %>
+                <%#= f.input :controller_name, :as => :hidden, input_html: { value: "#{params[:controller]}" }  %>
+                <%#= f.input :action_name, :as => :hidden, input_html: {value: "#{params[:action]}"} %>
+                <%= f.submit '', class: 'fa fa-search navbar-main-search-submit' %>
+                <i class="fa fa-search search-icon"></i>
+              </div>
+          <% end %>
 
 
-        <ul class="nav navbar-nav navbar-right">
-          <% if user_signed_in? %>
-              <li class="dropdown"><a href="/customer/profile"><%#= current_user.email %> My Account</a>
-                <ul class="dropdown-menu dropdown-menu-shipping-cart">
-                  <li><%= link_to 'Dashboard', customer_dashboard_path %></li>
-                  <li><%= link_to 'Advertisements', customer_advertisements_path %></li>
-                  <li><%= link_to 'Products', customer_products_path %></li>
-                  <li><%= link_to 'Services', customer_services_path %></li>
-                  <li><%= link_to 'Enquiries', customer_enquiries_path %></li>
-                </ul>
-              </li>
-              <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
-          <% else %>
-              <li class="dropdown">
-                <!--<a href="#nav-account-dialog" data-effect="mfp-move-from-top" class="popup-text">Start</a>-->
-                <a href="javascript:void(0)">Start</a>
-                <ul class="dropdown-menu dropdown-menu-shipping-cart">
-                  <li>
-                    <a href="#nav-login-dialog" class="popup-text">Login</a>
-                  </li>
-                </ul>
-              </li>
-          <%- end %>
-        </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <% if user_signed_in? %>
+                <li class="dropdown"><a href="/customer/profile"><%#= current_user.email %> My Account</a>
+                  <ul class="dropdown-menu dropdown-menu-shipping-cart">
+                    <li><%= link_to 'Dashboard', customer_dashboard_path %></li>
+                    <li><%= link_to 'Advertisements', customer_advertisements_path %></li>
+                    <li><%= link_to 'Products', customer_products_path %></li>
+                    <li><%= link_to 'Services', customer_services_path %></li>
+                    <li><%= link_to 'Enquiries', customer_enquiries_path %></li>
+                  </ul>
+                </li>
+                <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
+            <% else %>
+                <li class="dropdown">
+                  <!--<a href="#nav-account-dialog" data-effect="mfp-move-from-top" class="popup-text">Start</a>-->
+                  <a href="javascript:void(0)">Start</a>
+                  <ul class="dropdown-menu dropdown-menu-shipping-cart">
+                    <li>
+                      <a href="#nav-login-dialog" class="popup-text">Login</a>
+                    </li>
+                  </ul>
+                </li>
+            <%- end %>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </div>
+  <%= render partial: 'welcome/shared/alerts'%>
 </div>
-<%= render partial: 'welcome/shared/alerts'%>
+<div class="header-space"></div>
